--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,20 @@ This is a sample OAuth/Flask application.
     <p style="color:red">Error: {{ error }}</p> 
   {% endif %}
   <div>
-  Current data: <br/>
-  {% if user_data %}
-    {% for key in user_data %}
-      {{key}}: {{user_data[key]}}<br/>
+  <h3>Current data</h3>
+  {% if user_data %}  
+    {% for key in user_data.keys() %}
+      <p>
+      {% if key == 'geographicarea' and user_data['geographicarea'] | length > 0 %}
+        Geographic area: {{user_data['geographicarea']}}
+      {% endif %}
+      {% if key == 'maxprice' %}
+        Maximum home price: {{ "$%.0f"|format(user_data['maxprice'])}}
+      {% endif %}
+      {% if key == 'minprice' %}
+        Minimum home price: {{ "$%.0f"|format(user_data['minprice'])}}
+      {% endif %}
+      </p>
     {% endfor %}
   {% endif %}
 
