Added in proper update functionality.

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,18 +12,18 @@ This is a sample OAuth/Flask application.
     <p style="color:red">Error: {{ error }}</p> 
   {% endif %}
   <div>
-  <h3>Current data</h3>
-  {% if user_data %}  
-    {% for key in user_data.keys() %}
+  <h3>Current preferences</h3>
+  {% if registration_data %}  
+    {% for key in registration_data.keys() %}
       <p>
-      {% if key == 'geographicarea' and user_data['geographicarea'] | length > 0 %}
-        Geographic area: {{user_data['geographicarea']}}
+      {% if key == 'geographicarea' and registration_data['geographicarea'] | length > 0 %}
+        Geographic area: {{registration_data['geographicarea']}}
       {% endif %}
       {% if key == 'maxprice' %}
-        Maximum home price: {{ "$%.0f"|format(user_data['maxprice'])}}
+        Maximum home price: {{ "$%.0f"|format(registration_data['maxprice'])}}
       {% endif %}
       {% if key == 'minprice' %}
-        Minimum home price: {{ "$%.0f"|format(user_data['minprice'])}}
+        Minimum home price: {{ "$%.0f"|format(registration_data['minprice'])}}
       {% endif %}
       </p>
     {% endfor %}
@@ -31,13 +31,24 @@ This is a sample OAuth/Flask application.
 
   </div>
   <div>
-Update your data: 
+  <h3>Update your preferences</h3>
 
 <form action="/update" method="post">
-  <textarea name="user_data">
-    {{user_data}}
-  </textarea>
-<br/>
+  {% if registration_data %}  
+    {% for key in registration_data.keys() %}
+      <p>
+      {% if key == 'geographicarea' %}
+        Geographic area: <input type='{{fields['registration.data.'+key].control}}' {% if fields['registration.data.'+key].required %}required{% endif %} name='{{key}}' value='{{registration_data['geographicarea']}}' />
+      {% endif %}
+      {% if key == 'maxprice' %}
+        Maximum home price: <input type='{{fields['registration.data.'+key].control}}' {% if fields['registration.data.'+key].required %}required{% endif %} name='{{key}}' value='{{registration_data['maxprice']}}' />
+      {% endif %}
+      {% if key == 'minprice' %}
+        Minimum home price: <input type='{{fields['registration.data.'+key].control}}' {% if fields['registration.data.'+key].required %}required{% endif %} name='{{key}}' value='{{registration_data['minprice']}}' />
+      {% endif %}
+      </p>
+    {% endfor %}
+  {% endif %}
   <input type="submit" value="Update"></input>
 </form>
 
